tests/e2e/semantics/object_index_dot.story
a = {"a": true}
a.b = 0
